[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/VisibilityNotifier2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/animals/crow.png" type="Texture" id=2]
[ext_resource path="res://Assets/animals/crow2.png" type="Texture" id=3]
[ext_resource path="res://Assets/animals/crow4.png" type="Texture" id=4]
[ext_resource path="res://Assets/animals/crow3.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Crow.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Crow_poop.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/sounds/crow.ogg" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "flying",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "landed",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.06226

[sub_resource type="Animation" id=3]
length = 3.0

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 137.713

[sub_resource type="CircleShape2D" id=6]
radius = 13.0

[node name="Crow" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 6 )
poop_scene = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "landed"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/hit = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="ass" type="Position2D" parent="."]
position = Vector2( 4, 4 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2" groups=["crow"]]
shape = SubResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
max_distance = 1000.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
